--- a/6-house-price-prediction/house-prices-prediction-with-pipline-optuna-v1.ipynb
+++ b/6-house-price-prediction/house-prices-prediction-with-pipline-optuna-v1.ipynb
@@ -3131,7 +3131,7 @@
     "tags": []
    },
    "source": [
-    "# 5. Conclosion"
+    "# 5. Conclusion"
    ]
   },
   {
@@ -3148,7 +3148,7 @@
     "tags": []
    },
    "source": [
-    "Submession shows RMSE equal to 0.12832. \n",
+    "Submission shows RMSE equal to 0.12832. \n",
     "\n",
     "This is baseline model. Possible way for improvement is features engineering."
    ]
